--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mysten/dapp-kit": "^0.14.47",
     "@mysten/sui": "^1.20.0",
     "@tanstack/react-query": "^5.64.2",
+    "navi-sdk": "^1.4.27",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
